# Strategy-Factory

./: .gitignore  LICENSE  MANUAL.md  README.md  main.py  pyproject.toml  requirements.txt  viewer.html
engine/: data_engine.py  dynamic_fusion.py  optimizer.py  permutation_engine.py  sandbox_engine.py  tearsheet.py  walk_forward.py
scripts/: data_downloader.py  generate_leaderboard.py  generate_permutation_leaderboard.py  generate_wfo_leaderboard.py  mass_optuna.py  rename_wfo_reports.py
strategies/: adx_regime.py  base_strategy.py  chop_regime.py  coinflip_regime.py  cvd_slope.py  donchian_channel.py  ema_100_slope.py  ema_150_slope.py  ema_200_slope.py  ema_slope.py  kama_slope.py  linreg_slope.py  obv_slope.py  rsi_momentum.py  vwap_24h.py
tests/: test_adx_regime.py  test_base_strategy.py  test_chop_regime.py  test_cvd_slope.py  test_data_downloader.py  test_data_engine.py  test_donchian_channel.py  test_ema_slope.py  test_kama_slope.py  test_linreg_slope.py  test_main.py  test_obv_slope.py  test_optimizer.py  test_permutation_engine.py  test_permutation_walkforward.py  test_rsi_momentum.py  test_sandbox_engine.py  test_symbol_isolation.py  test_tearsheet.py  test_vwap_24h.py  test_walk_forward.py  test_wfo_report_tools.py
